--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Calculator Online</title>
 </head>
 
@@ -51,6 +51,6 @@
         </div>
     </div>
 
-    <script defer src="index.js"></script>
+    <script defer src="/src/index.js/"></script>
 </body>
 </html>
